backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <SUBDOMAIN>-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    cert-manager.io/issuer: letsencrypt-<ENV>
spec:
  ingressClassName: nginx
  rules:
    - host: <SUBDOMAIN>.dpschool.app
      http:
        paths: 
        - path: /api(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 8080
  tls:
  - hosts:
    - <SUBDOMAIN>.dpschool.app
    secretName: <SUBDOMAIN>-certificate
